data/forge_javadoc/1.7.10/processed/net_minecraft_entity_monster_EntityIronGolem.md
# EntityIronGolem

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.EntityLiving → net.minecraft.entity.EntityCreature → net.minecraft.entity.monster.EntityGolem → net.minecraft.entity.monster.EntityIronGolem

## Class signature

```java
public class EntityIronGolem extends EntityGolem
```

## Methods

- `protected void applyEntityAttributes()`
- `boolean attackEntityAsMob(Entity p_70652_1_)`
- `boolean canAttackClass(java.lang.Class p_70686_1_)`
- `protected void collideWithEntity(Entity p_82167_1_)`
- `protected int decreaseAirSupply(int p_70682_1_)`
- `protected void dropFewItems(boolean p_70628_1_, int p_70628_2_)`
- `protected void entityInit()`
- `protected void func_145780_a(int p_145780_1_, int p_145780_2_, int p_145780_3_, Block p_145780_4_)`
- `int getAttackTimer()`
- `protected java.lang.String getDeathSound()`
- `int getHoldRoseTick()`
- `protected java.lang.String getHurtSound()`
- `Village getVillage()`
- `void handleHealthUpdate(byte p_70103_1_)`
- `boolean isAIEnabled()`
- `boolean isPlayerCreated()`
- `void onDeath(DamageSource p_70645_1_)`
- `void onLivingUpdate()`
- `void readEntityFromNBT(NBTTagCompound p_70037_1_)`
- `void setHoldingRose(boolean p_70851_1_)`
- `void setPlayerCreated(boolean p_70849_1_)`
- `protected void updateAITick()`
- `void writeEntityToNBT(NBTTagCompound p_70014_1_)`

## Fields

- `EntityIronGolem`